# filmsaw

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  Resource.aps  Resource.rc  ZERO_CHECK.proj  moviemaker.sln  moviemaker.vcxproj  moviemaker.vcxproj.filters
data/: box.glsl  box.h  icons.c
data/fonts/: vera.c
src/: debuglog.h  gb_math.h  main.c  sprites.inl  ui.c  ui.h  video.c  video.h  video_clips.c  video_clips.h
